# ble_provisioner_thesis

./: .gitmodules  CMakeLists.txt  prj.conf
src/: main.c  model.c  rpr_test_client.c  rpr_test_client.h
